src/01_enformer/00_clusterCRG/work/86/894400e3c416a3458e06093061c337/.command.log
  File "02_pred_eval.py", line 72
    if(eval == "eval"){
                      ^
SyntaxError: invalid syntax
cp: ‘.command.out’ and ‘/nfs/users/cn/lsantus/projects/FED/src/00_clusterCRG/work/86/894400e3c416a3458e06093061c337/.command.out’ are the same file
cp: ‘.command.err’ and ‘/nfs/users/cn/lsantus/projects/FED/src/00_clusterCRG/work/86/894400e3c416a3458e06093061c337/.command.err’ are the same file
